--- a/index.html
+++ b/index.html
@@ -12,24 +12,18 @@
     <div id="app">
       <div class="nav-bar"></div>
 
-      <div class="product-display">
-        <div class="product-container">
-          <div class="product-image">
-            <!-- image goes here -->
-          </div>
-          <div class="product-info">
-            <h1>{{ product }}</h1>
-          </div>
-        </div>
-      </div>
+      <div class="cart">Cart({{ cart }})</div>
+      <product-display :premium="premium"></product-display>
     </div>
 
-    <!-- Import Js -->
+    <!-- Import App -->
     <script src="./main.js"></script>
 
-    <!--Mount Vue app-->
+    <script src="./components/ProductDisplay.js"></script>
+    <script src="./components/ProductDetails.js"></script>
+    <!-- Mount App -->
     <script>
-      const mountApp = app.mount("#app");
+      const mountedApp = app.mount("#app");
     </script>
   </body>
 </html>
